--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -6,6 +6,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         node: [16, 18, 20]
+        include:
+            - os: windows
+              node: 14
+        exclude:
+            - os: ubuntu-latest
+              node: 16
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get Code
