Changed ls to find

--- a/.github/workflows/use_reuseable.yml
+++ b/.github/workflows/use_reuseable.yml
@@ -71,7 +71,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: List Files
-        run: ls -alR
+        run: find . -type f -name "*.yml"
 
   # deploy:
   #   needs: build
