--- a/.github/workflows/use_reuseable.yml
+++ b/.github/workflows/use_reuseable.yml
@@ -74,7 +74,9 @@ jobs:
         shell: pwsh
         run: |
           get-location
+          write-host "Listing files"
           get-childItem . -recurse
+          write-host "Done listing files"
   # deploy:
   #   needs: build
   #   #uses: ./.github/workflows/reuseable.yml
