--- a/.github/workflows/use_reuseable.yml
+++ b/.github/workflows/use_reuseable.yml
@@ -67,21 +67,20 @@ jobs:
           name: dist-files
           path: dist
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: List Files
-        shell: pwsh
-        run: |
-          get-location
-          write-host "Listing files"
-          get-childItem . -recurse
-          write-host "Done listing files"
   # deploy:
-  #   needs: build
-  #   #uses: ./.github/workflows/reuseable.yml
-  #   uses: ./test.yaml
-
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: List Files
+  #       shell: pwsh
+  #       run: |
+  #         get-location
+  #         write-host "Listing files"
+  #         get-childItem . -recurse
+  #         write-host "Done listing files"
+  deploy:
+    needs: build
+    uses: ./.github/workflows/reuseable.yml
+    
 
   report:
     needs: [lint, deploy]
