--- a/.github/workflows/reuseable.yml
+++ b/.github/workflows/reuseable.yml
@@ -1,8 +1,20 @@
 name: Reusable Deploy
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact_name:
+        description: The name of the artifact to deploy
+        required: true
+        default: 'artifact'
+        type: string
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Get code
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ inputs.artifact_name }}
+          
       - name: Output Information
         uses: echo "Deploy & Upload"
